--- a/final-framework/final-annotation/pom.xml
+++ b/final-framework/final-annotation/pom.xml
@@ -14,23 +14,26 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
-            <!--            <optional>true</optional>-->
-            <!--            <scope>provided</scope>-->
+            <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <groupId>org.finalframework.auto</groupId>
+            <artifactId>final-auto-service</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.finalframework.auto</groupId>
+            <artifactId>final-auto-processor</artifactId>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <!--            <optional>true</optional>-->
-            <!--            <scope>provided</scope>-->
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <!--            <scope>provided</scope>-->
         </dependency>
     </dependencies>
 </project>
