--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>final-framework</module>
         <module>final-auto</module>
         <module>final-boot</module>
+        <module>final-example</module>
     </modules>
 
 
