--- a/final-boot/pom.xml
+++ b/final-boot/pom.xml
@@ -14,6 +14,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>final-boot-starter</module>
+        <module>final-boot-starter-entity</module>
         <module>final-boot-starter-data</module>
         <module>final-boot-starter-redis</module>
         <module>final-boot-starter-cache</module>
@@ -43,6 +44,11 @@
             <dependency>
                 <groupId>org.finalframework.boot</groupId>
                 <artifactId>final-boot-starter-json</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.finalframework.boot</groupId>
+                <artifactId>final-boot-starter-entity</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
