--- a/final-auto/final-auto-mybatis/pom.xml
+++ b/final-auto/final-auto-mybatis/pom.xml
@@ -38,6 +38,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.finalframework</groupId>
+            <artifactId>final-javapoets</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>dom4j</groupId>
             <artifactId>dom4j</artifactId>
             <version>1.6.1</version>
