--- a/final-framework/pom.xml
+++ b/final-framework/pom.xml
@@ -31,6 +31,7 @@
         <module>final-zookeeper</module>
         <module>final-selenium</module>
         <module>final-web</module>
+        <module>final-javapoets</module>
     </modules>
 
     <dependencyManagement>
@@ -59,6 +60,11 @@
             <dependency>
                 <groupId>org.finalframework</groupId>
                 <artifactId>final-annotation</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.finalframework</groupId>
+                <artifactId>final-javapoets</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
