[U] add final dashboard

--- a/final-boot/final-boot-autoconfigure/pom.xml
+++ b/final-boot/final-boot-autoconfigure/pom.xml
@@ -25,6 +25,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.finalframework</groupId>
+            <artifactId>final-zookeeper</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.finalframework.auto</groupId>
             <artifactId>final-auto-spring</artifactId>
             <scope>provided</scope>
