--- a/final-framework/final-dashboard-ui/pom.xml
+++ b/final-framework/final-dashboard-ui/pom.xml
@@ -3,28 +3,36 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>final-boot</artifactId>
-        <groupId>org.finalframework.boot</groupId>
+        <artifactId>final-framework</artifactId>
+        <groupId>org.finalframework</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>final-boot-starter-dashboard</artifactId>
+    <artifactId>final-dashboard-ui</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>org.finalframework.boot</groupId>
-            <artifactId>final-boot-autoconfigure</artifactId>
+            <groupId>org.finalframework.auto</groupId>
+            <artifactId>final-auto-spring</artifactId>
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
             <artifactId>final-dashboard</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>nz.net.ultraq.thymeleaf</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
+            <version>${thymeleaf-layout-dialect.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.finalframework</groupId>
-            <artifactId>final-dashboard-ui</artifactId>
+            <artifactId>final-json</artifactId>
         </dependency>
     </dependencies>
-
 
 </project>
