--- a/final-framework/final-annotation/pom.xml
+++ b/final-framework/final-annotation/pom.xml
@@ -18,7 +18,7 @@
         </dependency>
         <dependency>
             <groupId>org.finalframework.auto</groupId>
-            <artifactId>final-auto-service</artifactId>
+            <artifactId>final-auto-core</artifactId>
             <optional>true</optional>
         </dependency>
         <dependency>
