--- a/final-framework/final-dubbo/pom.xml
+++ b/final-framework/final-dubbo/pom.xml
@@ -30,7 +30,7 @@
         </dependency>
         <dependency>
             <groupId>org.finalframework.auto</groupId>
-            <artifactId>final-auto-service</artifactId>
+            <artifactId>final-auto-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
