--- a/final-framework/final-json/pom.xml
+++ b/final-framework/final-json/pom.xml
@@ -49,7 +49,7 @@
         </dependency>
         <dependency>
             <groupId>org.finalframework.auto</groupId>
-            <artifactId>final-auto-service</artifactId>
+            <artifactId>final-auto-core</artifactId>
         </dependency>
     </dependencies>
 </project>
