--- a/final-auto/final-auto-processor/pom.xml
+++ b/final-auto/final-auto-processor/pom.xml
@@ -19,7 +19,7 @@
         </dependency>
         <dependency>
             <groupId>org.finalframework.auto</groupId>
-            <artifactId>final-auto-service</artifactId>
+            <artifactId>final-auto-core</artifactId>
         </dependency>
     </dependencies>
 
