--- a/final-example/final-example-service/pom.xml
+++ b/final-example/final-example-service/pom.xml
@@ -17,6 +17,10 @@
             <groupId>org.finalframework.example</groupId>
             <artifactId>final-example-dao</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.finalframework.auto</groupId>
+            <artifactId>final-auto-service</artifactId>
+        </dependency>
     </dependencies>
 
 
