--- a/final-auto/final-auto-service/pom.xml
+++ b/final-auto/final-auto-service/pom.xml
@@ -32,6 +32,10 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.squareup</groupId>
+            <artifactId>javapoet</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.finalframework</groupId>
             <artifactId>final-data</artifactId>
             <version>1.0.0-SNAPSHOT</version>
