--- a/final-example/final-example-web/pom.xml
+++ b/final-example/final-example-web/pom.xml
@@ -34,6 +34,17 @@
             <groupId>org.finalframework.example</groupId>
             <artifactId>final-example-service</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.benf/cfr -->
+        <dependency>
+            <groupId>org.benf</groupId>
+            <artifactId>cfr</artifactId>
+            <version>0.150</version>
+        </dependency>
+        <dependency>
+            <groupId>com.taobao.arthas</groupId>
+            <artifactId>arthas-core</artifactId>
+            <version>3.4.4</version>
+        </dependency>
     </dependencies>
 
 
