--- a/final-example/final-example-service/pom.xml
+++ b/final-example/final-example-service/pom.xml
@@ -20,6 +20,7 @@
         <dependency>
             <groupId>org.finalframework.auto</groupId>
             <artifactId>final-auto-service</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
