--- a/final-framework/final-dashboard-ui/pom.xml
+++ b/final-framework/final-dashboard-ui/pom.xml
@@ -15,6 +15,7 @@
         <dependency>
             <groupId>org.finalframework.auto</groupId>
             <artifactId>final-auto-spring</artifactId>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
