--- a/final-framework/final-dashboard-ui/pom.xml
+++ b/final-framework/final-dashboard-ui/pom.xml
@@ -34,6 +34,14 @@
             <groupId>org.finalframework</groupId>
             <artifactId>final-json</artifactId>
         </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.security</groupId>-->
+        <!--            <artifactId>spring-security-config</artifactId>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.security</groupId>-->
+        <!--            <artifactId>spring-security-web</artifactId>-->
+        <!--        </dependency>-->
     </dependencies>
 
 </project>
