--- a/final-framework/pom.xml
+++ b/final-framework/pom.xml
@@ -5,8 +5,8 @@
     <parent>
         <artifactId>final-frameworks</artifactId>
         <groupId>org.ifinal.finalframework.frameworks</groupId>
-        <version>1.0.0</version>
-        <!--        <version>1.0.0</version>-->
+        <version>1.0.1-SNAPSHOT</version>
+        <!--        <version>1.0.1-SNAPSHOT</version>-->
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
