--- a/final-auto/final-auto-service/pom.xml
+++ b/final-auto/final-auto-service/pom.xml
@@ -19,17 +19,17 @@
         <dependency>
             <groupId>org.ifinal.finalframework</groupId>
             <artifactId>final-core</artifactId>
-            <version>${project.version}</version>
+            <version>${final.version}</version>
         </dependency>
         <dependency>
             <groupId>org.ifinal.finalframework</groupId>
             <artifactId>final-annotation</artifactId>
-            <version>${project.version}</version>
+            <version>${final.version}</version>
         </dependency>
         <dependency>
             <groupId>org.ifinal.finalframework</groupId>
             <artifactId>final-javapoets</artifactId>
-            <version>${project.version}</version>
+            <version>${final.version}</version>
         </dependency>
         <dependency>
             <groupId>com.squareup</groupId>
