--- a/final-auto/final-auto-coding/pom.xml
+++ b/final-auto/final-auto-coding/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>org.ifinal.finalframework</groupId>
             <artifactId>final-core</artifactId>
-            <version>${project.version}</version>
+            <version>${final.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.velocity</groupId>
