--- a/final-auto/final-auto-data/pom.xml
+++ b/final-auto/final-auto-data/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>org.ifinal.finalframework</groupId>
             <artifactId>final-annotation</artifactId>
-            <version>${project.version}</version>
+            <version>${final.version}</version>
         </dependency>
     </dependencies>
 
