--- a/final-auto/pom.xml
+++ b/final-auto/pom.xml
@@ -31,7 +31,7 @@
             <!--            <dependency>-->
             <!--                <groupId>org.ifinal.finalframework</groupId>-->
             <!--                <artifactId>final-framework</artifactId>-->
-            <!--                <version>${project.version}</version>-->
+            <!--                <version>${final.version}</version>-->
             <!--                <type>pom</type>-->
             <!--                <scope>import</scope>-->
             <!--            </dependency>-->
@@ -41,48 +41,48 @@
             <dependency>
                 <groupId>org.ifinal.finalframework.auto</groupId>
                 <artifactId>final-auto-annotation</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework.auto</groupId>
                 <artifactId>final-auto-core</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework.auto</groupId>
                 <artifactId>final-auto-processor</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework.auto</groupId>
                 <artifactId>final-auto-spring</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework.auto</groupId>
                 <artifactId>final-auto-coding</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework.auto</groupId>
                 <artifactId>final-auto-data</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework.auto</groupId>
                 <artifactId>final-auto-query</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.ifinal.finalframework.auto</groupId>
                 <artifactId>final-auto-mybatis</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework.auto</groupId>
                 <artifactId>final-auto-service</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
