--- a/final-framework/pom.xml
+++ b/final-framework/pom.xml
@@ -44,7 +44,7 @@
             <dependency>
                 <groupId>org.ifinal.finalframework.auto</groupId>
                 <artifactId>final-auto</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -54,95 +54,95 @@
             <dependency>
                 <groupId>org.ifinal.finalframework</groupId>
                 <artifactId>final-framework</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework</groupId>
                 <artifactId>final-core</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework</groupId>
                 <artifactId>final-annotation</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework</groupId>
                 <artifactId>final-javapoets</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework</groupId>
                 <artifactId>final-json</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework</groupId>
                 <artifactId>final-redis</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework</groupId>
                 <artifactId>final-zookeeper</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework</groupId>
                 <artifactId>final-mybatis</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework</groupId>
                 <artifactId>final-dubbo</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework</groupId>
                 <artifactId>final-data</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework</groupId>
                 <artifactId>final-cache</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework</groupId>
                 <artifactId>final-retrofit</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework</groupId>
                 <artifactId>final-dashboard</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework</groupId>
                 <artifactId>final-dashboard-ui</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.ifinal.finalframework</groupId>
                 <artifactId>final-web</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.ifinal.finalframework</groupId>
                 <artifactId>final-aop</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.ifinal.finalframework</groupId>
                 <artifactId>final-context</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.ifinal.finalframework</groupId>
                 <artifactId>final-monitor</artifactId>
-                <version>${project.version}</version>
+                <version>${final.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.mybatis</groupId>
