--- a/pom.xml
+++ b/pom.xml
@@ -53,9 +53,9 @@
 
 
     <properties>
+        <final.version>1.0.1-SNAPSHOT</final.version>
         <java.version>1.8</java.version>
         <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
-        <final.version>1.0.0.1</final.version>
         <mybatis.version>3.5.4</mybatis.version>
         <mybatis.spring.boot.version>2.1.0</mybatis.spring.boot.version>
         <dubbo.boot.version>2.7.8</dubbo.boot.version>
@@ -66,6 +66,21 @@
         <velocity.tool.version>3.0</velocity.tool.version>
         <squareup.javapoet.version>1.13.0</squareup.javapoet.version>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>snapshot</id>
+            <properties>
+                <final.version>1.0.1-SNAPSHOT</final.version>
+            </properties>
+        </profile>
+        <profile>
+            <id>deploy</id>
+            <properties>
+                <final.version>1.0.0</final.version>
+            </properties>
+        </profile>
+    </profiles>
 
 
     <dependencies>
