--- a/final-auto/final-auto-service/pom.xml
+++ b/final-auto/final-auto-service/pom.xml
@@ -32,14 +32,9 @@
             <version>${final.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.squareup</groupId>
-            <artifactId>javapoet</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.ifinal.finalframework</groupId>
-            <artifactId>final-data</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
+            <artifactId>final-service</artifactId>
+            <version>${final.version}</version>
         </dependency>
     </dependencies>
 
