--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,4 +1,4 @@
-name: Build
+name: sonar
 on:
   push:
     branches:
@@ -7,7 +7,7 @@ on:
     types: [ opened, synchronize, reopened ]
 jobs:
   build:
-    name: Build
+    name: sonar
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
