--- a/final-boot/final-boot-autoconfigure/pom.xml
+++ b/final-boot/final-boot-autoconfigure/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>final-boot</artifactId>
         <groupId>org.ifinal.finalframework.boot</groupId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
