--- a/final-example/final-example-service/pom.xml
+++ b/final-example/final-example-service/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>final-example</artifactId>
         <groupId>org.ifinal.finalframework.example</groupId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
