--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>org.ifinal.finalframework.frameworks</groupId>
     <artifactId>final-frameworks</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Final framework with Spring Boot</description>
@@ -53,7 +53,7 @@
 
 
     <properties>
-        <final.version>1.0.1-SNAPSHOT</final.version>
+        <final.version>1.0.1</final.version>
         <java.version>1.8</java.version>
         <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
         <mybatis.version>3.5.6</mybatis.version>
