--- a/final-example/final-example-web/src/main/resources/application.yml
+++ b/final-example/final-example-web/src/main/resources/application.yml
@@ -11,3 +11,6 @@ final:
   zookeeper:
     address: 10.248.224.18:2181
     timeout: 3000
+logging:
+  pattern:
+    console: "%clr(%d{${LOG_DATEFORMAT_PATTERN:-yyyy-MM-dd HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %clr([ %-36X{trace} ]){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}"
