--- a/final-example/final-example-web/pom.xml
+++ b/final-example/final-example-web/pom.xml
@@ -35,6 +35,10 @@
             <artifactId>final-boot-starter-sharding</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>sharding-jdbc-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.ifinal.finalframework.example</groupId>
             <artifactId>final-example-service</artifactId>
             <exclusions>
