--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
         <mybatis.spring.boot.version>2.1.0</mybatis.spring.boot.version>
         <dubbo.boot.version>2.7.8</dubbo.boot.version>
         <sharding.version>5.0.0-alpha</sharding.version>
+        <sharding4.version>4.1.1</sharding4.version>
         <retrofit.version>2.8.1</retrofit.version>
         <okhttp.version>3.14.7</okhttp.version>
         <velocity.core.version>2.1</velocity.core.version>
@@ -143,6 +144,11 @@
                 <artifactId>shardingsphere-jdbc-core</artifactId>
                 <version>${sharding.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.shardingsphere</groupId>
+                <artifactId>sharding-jdbc-core</artifactId>
+                <version>${sharding4.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -162,7 +168,6 @@
                                     <goal>jar</goal>
                                 </goals>
                             </execution>
-
                         </executions>
                     </plugin>
                     <plugin>
@@ -179,6 +184,29 @@
                     </plugin>
                 </plugins>
             </build>
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>ossrh</id>
+                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+                </snapshotRepository>
+                <repository>
+                    <id>ossrh</id>
+                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+        <profile>
+            <id>dmall</id>
+            <distributionManagement>
+                <repository>
+                    <id>dmall.com</id>
+                    <url>http://nexus.dmall.com:8081/nexus/content/repositories/3rd</url>
+                </repository>
+                <snapshotRepository>
+                    <id>dmall.com</id>
+                    <url>http://nexus.dmall.com:8081/nexus/content/repositories/snapshots</url>
+                </snapshotRepository>
+            </distributionManagement>
         </profile>
     </profiles>
 
@@ -218,17 +246,6 @@
             </plugins>
         </pluginManagement>
     </build>
-
-    <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-        </snapshotRepository>
-        <repository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </distributionManagement>
 
 
 </project>
